// --- 1. HỆ THỐNG QUẢN TRỊ (STAFF) ---
// Tách biệt hoàn toàn để bảo mật và quản lý nội dung chính thống

Table staff_admins {
  id uuid [pk, default: `uuid_generate_v4()`]
  email varchar [unique, not null]
  password_hash varchar [not null]
  full_name varchar
  role varchar [note: 'admin, editor, moderator']
  created_at timestamp [default: `now()`]
}

// --- 2. NGƯỜI DÙNG & TỔ CHỨC (PHASE 1 & 2) ---

Table users {
  id uuid [pk, default: `uuid_generate_v4()`]
  email varchar [unique, not null]
  password_hash varchar [not null]
  full_name varchar
  avatar_url varchar
  xp_total integer [default: 0]
  streak_count integer [default: 0]
  settings jsonb [note: 'Lưu theme, mục tiêu XP, thông báo...']
  created_at timestamp [default: `now()`]
}

Table organizations {
  id uuid [pk]
  name varchar
  owner_id uuid [ref: > users.id]
  created_at timestamp
}

Table classrooms {
  id uuid [pk]
  org_id uuid [ref: > organizations.id]
  teacher_id uuid [ref: > users.id]
  name varchar
  invite_code varchar [unique]
  created_at timestamp
}

// --- 3. KHO NỘI DUNG (DICTIONARY & ARTICLES) ---

Table dictionary {
  id uuid [pk]
  // Phân tầng sở hữu
  creator_id uuid [ref: > users.id, null, note: 'User đóng góp']
  staff_author_id uuid [ref: > staff_admins.id, null, note: 'Admin tạo']
  
  kanji varchar
  hiragana varchar
  romaji varchar
  meanings jsonb [note: 'Nhiều nghĩa, ví dụ dạng JSON']
  jlpt_level integer
  
  // Trạng thái kiểm duyệt
  status varchar [default: 'approved', note: 'pending, approved, rejected']
  is_public boolean [default: true]
  verified_by uuid [ref: > staff_admins.id]
  created_at timestamp [default: `now()`]
}

Table articles {
  id uuid [pk]
  author_id uuid [ref: > users.id, null]
  staff_author_id uuid [ref: > staff_admins.id, null]
  
  title varchar
  slug varchar [unique]
  content_raw text
  content_annotated jsonb [note: 'Lưu tokenized text để click-to-lookup']
  
  level integer
  status varchar [default: 'pending']
  verified_by uuid [ref: > staff_admins.id]
  created_at timestamp [default: `now()`]
}

// --- 4. HỆ THỐNG BÀI TẬP LINH HOẠT ---

Table questions {
  id uuid [pk]
  creator_id uuid [ref: > users.id, null]
  staff_author_id uuid [ref: > staff_admins.id, null]
  
  reference_type varchar [note: 'article, dictionary']
  reference_id uuid [note: 'ID của bài đọc hoặc từ vựng tương ứng']
  
  question_data jsonb [note: 'Linh hoạt type: quiz, fill_in_blank, matching...']
  status varchar [default: 'approved']
  is_public boolean [default: true]
  verified_by uuid [ref: > staff_admins.id]
}

// --- 5. PHÂN LOẠI ĐA TẦNG (MANY-TO-MANY) ---

Table categories {
  id uuid [pk]
  name varchar
  slug varchar [unique]
  color_code varchar
  icon_url varchar
}

Table article_categories {
  article_id uuid [ref: > articles.id]
  category_id uuid [ref: > categories.id]
  Indexes { (article_id, category_id) [pk] }
}

Table tags {
  id uuid [pk]
  name varchar [unique]
}

Table article_tags {
  article_id uuid [ref: > articles.id]
  tag_id uuid [ref: > tags.id]
  Indexes { (article_id, tag_id) [pk] }
}

// --- 6. HỌC TẬP CÁ NHÂN HÓA & TIẾN ĐỘ ---

Table flashcards {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  dictionary_id uuid [ref: > dictionary.id]
  
  // Thuật toán SRS (Spaced Repetition)
  interval integer [default: 0]
  ease_factor float [default: 2.5]
  next_review timestamp
  status varchar [note: 'new, learning, mastered']
}

Table user_progress_articles {
  user_id uuid [ref: > users.id]
  article_id uuid [ref: > articles.id]
  status varchar [note: 'reading, completed']
  last_scroll_position integer
  completed_at timestamp
  
  Indexes { (user_id, article_id) [pk] }
}

Table activity_logs {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  action_type varchar [note: 'read_article, quiz_done, login']
  xp_gained integer
  reference_id uuid
  created_at timestamp [default: `now()`]
}